--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Portfolio Repo</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="section-container">
+      <div id="space-fixer" class="half-breadth">
+        <h1><span class="orange-color">Skip</span> The Diet,</h1>
+        <h1>Just Eat Healthy</h1>
+        <h1>With Food Network</h1>
+        <p id="gray-color">Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+        <a class="request-button" href="">Order Food</a>
+      </div>
+      <div class="half-breadth">
+        <img src="images/female/Group 8425.png" alt="Picture of good looking girl." />
+      </div>
+    </section>
+  </body>
 </html>
