Second Portion Done

--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
         <a class="request-button" href="">Order Food</a>
       </div>
       <div class="half-breadth">
-        <img src="images/female/Group 8425.png" alt="Picture of good looking girl." />
+        <img src="images/female/Group 8425.png" alt="Picture of a good looking girl." />
       </div>
+    </section>
+    <section id="about-me-banner" class="section-container">
+        <div class="half-breadth">
+            <img id="second-image" src="images/female/Person Image.png" alt="Picture Of an another good looking girl.">
+        </div>
+        <div class="half-breadth">
+            <h2>About Me</h2>
+            <p id="contact-me-spacing">Chef is an open source configuration management tool designed to enable infrastructure automation. Based around the idea of infrastructure as code, Chef allows the admin to rebuild the infrastructure with only backups of data, compute resources, and the code repository</p>
+            <a class="request-button" href="">Contact Me</a>
+        </div>
     </section>
   </body>
 </html>
