--- a/index.html
+++ b/index.html
@@ -33,5 +33,28 @@
             <a class="request-button" href="">Contact Me</a>
         </div>
     </section>
+    <section>
+        <div>
+            <h2>My Recepies</h2>
+            <p>A side of salmon, hot off the grill and laid on fig leaves from a backyard tree if you have one, makes a spectacular main course.</p>
+        </div>
+        <div>
+            <div>
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Mutton Fat Pakora</h3>
+                <p>I know they are not at all healthy but they tastes insanely delicious. So, my advice - don't avoid them but eat once in three months</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Baked Beef Pieces</h3>
+                <p>I will never fail to satisfy your apetite. Try this and surprise your family and guest. It will kick you inside.</p>
+            </div>
+            <div>
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Moong daal Bhuna</h3>
+                <p>  Last week I found half bag of whole moong daal in my pantry which was sitting behind a pack of pasta without whispering a word.</p>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
