Third Portion Done

--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
         </div>
     </section>
     <section>
-        <div>
+        <div id="recepie-area">
             <h2>My Recepies</h2>
-            <p>A side of salmon, hot off the grill and laid on fig leaves from a backyard tree if you have one, makes a spectacular main course.</p>
+            <p>A side of salmon, hot off the grill and laid on fig leaves from a backyard</p>
+            <p>tree if you have one, makes a spectacular main course.</p>
+            <p>Since last century.</p>
         </div>
-        <div>
-            <div>
+        <div id="card-container">
+            <div id="recepie-container">
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h3>Mutton Fat Pakora</h3>
                 <p>I know they are not at all healthy but they tastes insanely delicious. So, my advice - don't avoid them but eat once in three months</p>
             </div>
-            <div>
+            <div id="recepie-container">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h3>Baked Beef Pieces</h3>
                 <p>I will never fail to satisfy your apetite. Try this and surprise your family and guest. It will kick you inside.</p>
             </div>
-            <div>
+            <div id="recepie-container">
                 <img src="images/food/Project Cover.png" alt="">
                 <h3>Moong daal Bhuna</h3>
-                <p>  Last week I found half bag of whole moong daal in my pantry which was sitting behind a pack of pasta without whispering a word.</p>
+                <p>Last week I found half bag of whole moong daal in my pantry which was sitting behind a pack of pasta without whispering a word.</p>
             </div>
         </div>
     </section>
