Footer Portion Done

--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
             </div>
         </div>
     </section>
+    <footer>
+      <br>
+        <h3><span class="orange-color">FOOD</span> NETWORK</h3>
+        <p>Eat heathy to live healthy.Live healthy to live happy.</p>
+    </footer>
   </body>
 </html>
