Creative Portion Done

--- a/index.html
+++ b/index.html
@@ -41,27 +41,66 @@
             <p>Since last century.</p>
         </div>
         <div id="card-container">
-            <div id="recepie-container">
+            <div class="recepie-container">
                 <img src="images/food/Project Cover.jpg" alt="">
                 <h3>Mutton Fat Pakora</h3>
                 <p>I know they are not at all healthy but they tastes insanely delicious. So, my advice - don't avoid them but eat once in three months</p>
             </div>
-            <div id="recepie-container">
+            <div class="recepie-container">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <h3>Baked Beef Pieces</h3>
                 <p>I will never fail to satisfy your apetite. Try this and surprise your family and guest. It will kick you inside.</p>
             </div>
-            <div id="recepie-container">
+            <div class="recepie-container">
                 <img src="images/food/Project Cover.png" alt="">
                 <h3>Moong daal Bhuna</h3>
                 <p>Last week I found half bag of whole moong daal in my pantry which was sitting behind a pack of pasta without whispering a word.</p>
             </div>
         </div>
     </section>
-    <footer>
-      <br>
-        <h3><span class="orange-color">FOOD</span> NETWORK</h3>
-        <p>Eat heathy to live healthy.Live healthy to live happy.</p>
-    </footer>
+    <section id="creative">
+      <div id="creative-heading">
+        <h3>Popular Cuisines</h3>
+      </div>
+      <div id="creative-container">
+        <div class="item-container">
+          <ul>
+            <li>American</li>
+            <li>Bakery & Cake</li>
+            <li>Burger</li>
+            <li>Chinese</li>
+          </ul>
+        </div>
+        <div class="item-container">
+          <ul>
+            <li>Dessert</li>
+            <li>Healthy Food</li>
+            <li>Indian</li>
+            <li>Italian</li>
+          </ul>
+        </div>
+        <div class="item-container">
+          <ul>
+            <li>Japanese</li>
+            <li>Korean</li>
+            <li>Mexican</li>
+            <li>Pizza</li>
+          </ul>
+        </div>
+        <div class="item-container">
+          <ul>
+            <li>Seafood</li>
+            <li>Thai</li>
+            <li>Vegetarian</li>
+            <li>Western</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </body>
+  <footer>
+    <br>
+      <h3><span class="orange-color">FOOD</span> NETWORK</h3>
+      <p>Eat heathy to live healthy.Live healthy to live happy.</p>
+  </footer>
 </html>
