Slightly Edited Part 2

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         </div>
         <div id="card-container">
             <div class="recepie-container">
-                <img src="images/food/Project Cover.jpg" alt="">
+                <img src="images/food/Project Cover.jpg" alt="Mutton Pakora Picture.">
                 <h3>Mutton Fat Pakora</h3>
                 <p>I know they are not at all healthy but they tastes insanely delicious. So, my advice - don't avoid them but eat once in three months</p>
             </div>
             <div class="recepie-container">
-                <img src="images/food/Project Cover1.jpg" alt="">
+                <img src="images/food/Project Cover1.jpg" alt="Baked Beef Picture.">
                 <h3>Baked Beef Pieces</h3>
                 <p>I will never fail to satisfy your apetite. Try this and surprise your family and guest. It will kick you inside.</p>
             </div>
             <div class="recepie-container">
-                <img src="images/food/Project Cover.png" alt="">
+                <img src="images/food/Project Cover.png" alt="Moong Daal Picture.">
                 <h3>Moong daal Bhuna</h3>
                 <p>Last week I found half bag of whole moong daal in my pantry which was sitting behind a pack of pasta without whispering a word.</p>
             </div>
